--- a/index.html
+++ b/index.html
@@ -19,37 +19,68 @@
     <h1>Mi__Tienda</h1>
 
     <div>
+        <p>Camiseta corta con capucha amarrilla 12 euros.</p>
 <img src="./images/dom-hill-nimElTcTNyY-unsplash.jpg" alt="">
+
+<p>Camiseta capucha larga roja 15 euros.</p>
 <img src="./images/edward-howell-5wQwhve3ASo-unsplash.jpg" alt="">
+
+<p>Camiseta negra 10 euros.</p>
 <img src="./images/faith-yarn-hgtWvsq5e2c-unsplash.jpg" alt="">
-<img src="./images/jonathan-borba-HMhRTbuSEhY-unsplash.jpg" alt="">
+
+<p>Camiseta Hombre a rayas 12 euros. Camiseta corta negra mujer 9 euros.</p>
+<img src="./images/pexels-fritz-dela-cruz-5137173.jpg" alt="">
 </div>
 
 <div>
+    <p>Camiseta larga rosa con capucha. 12 euros.</p>
 <img src="./images/joshua-rawson-harris-dN67hPE5KWY-unsplash.jpg" alt="">
+
+<p> camiseta gris 10 euros</p>
 <img src="./images/mike-von-YsiSAp3ccvk-unsplash.jpg" alt="">
+
+<p>camiseta roja mangas largas 16 euros. camiseta roja corta 14 euros.</p>
 <img src="./images/naeim-jafari-laobUPA4jR8-unsplash.jpg" alt="">
+
+<p>Camiseta cuello negra 15 euros.</p>
 <img src="./images/napat-saeng-mVGW8j9rrC4-unsplash.jpg" alt="">
 </div>
 
 <div>
+    <p>Camiseta a rayas marrones 17 euros.</p>
 <img src="./images/tamara-bellis-pONwcn4IcVU-unsplash.jpg" alt="">
+
+<p>Camiseta Hombre celeste 18 euros.</p>
 <img src="./images/pexels-barbara-ribeiro-3188553.jpg" alt="">
+
+<p>Camiseta parejas lunnie tunnes 12 euros.</p>
 <img src="./images/pexels-luis-zambrano-11871918.jpg" alt="">
+
+<p>camiseta negra 10 euros</p>
 <img src="./images/pexels-el-gringo-photo-11757392.jpg" alt="">
     </div>
 
     <div>
+        <p>Camisetas negras mangas largas 10 euros.</p>
 <img src="./images/pexels-polina-tankilevitch-5708487.jpg" alt="">
+
+<p>Camiseta blanca hombre 10 euros.</p>
 <img src="./images/pexels-thirdman-5592605.jpg" alt="">
+
+<p>camiseta negra deportiva 10 euros.</p>
 <img src="./images/pexels-karolina-grabowska-4378328.jpg" alt="">
+
+<p>Camiseta celeste hombre 12 euros.</p>
 <img src="./images/pexels-евгений-качин-9941034.jpg" alt="">
     </div>
 
 <div>
+    <p>camiseta gris mujer 10 euros.</p>
     <img src="./images/pexels-spencer-selover-428338.jpg" alt="">
+
+    <p>Camiseta hombre amarrilla 12 euros</p>
     <img src="./images/pexels-raul-reynoso-1018911.jpg" alt="">
-    <img src="./images/pexels-fritz-dela-cruz-5137173.jpg" alt="">
+    
 </div>
 
 
